[gd_scene load_steps=5 format=3 uid="uid://cy7xkanwdvxyw"]

[ext_resource type="Theme" uid="uid://d2wr8qi0mdxxq" path="res://ui.tres" id="1_jqt1b"]
[ext_resource type="Script" uid="uid://bedep5fyad8x" path="res://windows/openfile.gd" id="2_jqt1b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5anin"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6kk3x"]

[node name="OpenFile" type="Window"]
title = "error"
initial_position = 1
size = Vector2i(315, 150)
theme = ExtResource("1_jqt1b")
script = ExtResource("2_jqt1b")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5anin")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6kk3x")
horizontal_scroll_mode = 0

[node name="desc" type="Label" parent="Panel/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2
text = "Тута сообщение"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "$open"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "$close"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
